--- a/app/src/main/res/layout/fragment_mainitem.xml
+++ b/app/src/main/res/layout/fragment_mainitem.xml
@@ -50,7 +50,9 @@
                 android:layout_height="26dp"
                 android:layout_marginEnd="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="22dp" />
+                tools:layout_editor_absoluteY="22dp"
+                android:layout_marginRight="12dp"
+                tools:ignore="MissingConstraints" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
