--- a/app/src/main/res/layout/contact_section_header.xml
+++ b/app/src/main/res/layout/contact_section_header.xml
@@ -2,6 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#DADADC"
+    android:padding="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,19 +16,19 @@
 
         <TextView
             android:id="@+id/separator"
-            style="?android:listSeparatorTextViewStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="New Text"
+            android:layout_marginLeft="10dp"
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <View
+      <!--  <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="1dp"
-            android:background="#DADADC"></View>
+            android:background="#DADADC"></View>-->
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
