--- a/app/src/main/res/layout/fragment_mainitem.xml
+++ b/app/src/main/res/layout/fragment_mainitem.xml
@@ -30,18 +30,18 @@
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/checkBox"
                 app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="14dp" />
 
             <TextView
                 android:id="@+id/txtCalory"
-                android:layout_width="317dp"
+                android:layout_width="358dp"
                 android:layout_height="20dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="9dp"
                 android:text="TextView"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.156"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtContent" />
 
@@ -50,10 +50,10 @@
                 android:layout_width="26dp"
                 android:layout_height="26dp"
                 android:layout_marginEnd="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="22dp"
                 android:layout_marginRight="12dp"
-                tools:ignore="MissingConstraints" />
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="22dp" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
