--- a/app/src/main/res/layout/fragment_mainitem.xml
+++ b/app/src/main/res/layout/fragment_mainitem.xml
@@ -17,6 +17,7 @@
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -43,7 +44,9 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtContent" />
+                app:layout_constraintTop_toBottomOf="@+id/txtContent"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="9dp" />
 
             <CheckBox
                 android:id="@+id/checkBox"
@@ -57,6 +60,12 @@
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        android:background="#DADADC"></View>
 
 
 </LinearLayout>
