--- a/app/src/main/res/layout/fragment_mainitem_list.xml
+++ b/app/src/main/res/layout/fragment_mainitem_list.xml
@@ -1,11 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="ge.bondx.calories.MainItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="ge.bondx.calories.MainItemFragment"
+    tools:context="ge.bondx.calories.MainItemFragment">
+
+<EditText
+    android:id="@+id/editTextversion"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="პროდუქტის ძებნა"
+    tools:layout_constraintTop_creator="1"
+    tools:layout_constraintRight_creator="1"
+    app:layout_constraintRight_toRightOf="parent"
+    android:layout_margin="5dp"
+    tools:layout_constraintLeft_creator="1"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    />
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/list"
+    android:name="ge.bondx.calories.MainItemFragment"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    tools:layout_constraintTop_creator="1"
+    tools:layout_constraintRight_creator="1"
+    tools:layout_constraintBottom_creator="1"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/editTextversion"
+    tools:layout_constraintLeft_creator="1"
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:layout_margin="5dp"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintVertical_bias="1.0"
     tools:listitem="@layout/fragment_mainitem" />
+
+</android.support.constraint.ConstraintLayout>
