--- a/app/src/main/res/layout/fragment_mainitem.xml
+++ b/app/src/main/res/layout/fragment_mainitem.xml
@@ -54,18 +54,14 @@
                 android:layout_height="26dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="12dp"
+                android:clickable="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="22dp" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
-        android:background="#DADADC"></View>
+
 
 
 </LinearLayout>
