--- a/app/src/main/res/layout/fragment_mainitem_list.xml
+++ b/app/src/main/res/layout/fragment_mainitem_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="ge.bondx.calories.MainItemFragment">
 
+    <!--
 <EditText
     android:id="@+id/editTextversion"
     android:layout_width="match_parent"
@@ -20,22 +21,23 @@
     app:layout_constraintTop_toTopOf="parent"
     />
 
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/list"
-    android:name="ge.bondx.calories.MainItemFragment"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    tools:layout_constraintTop_creator="1"
-    tools:layout_constraintRight_creator="1"
-    tools:layout_constraintBottom_creator="1"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/editTextversion"
-    tools:layout_constraintLeft_creator="1"
-    app:layout_constraintLeft_toLeftOf="parent"
-    android:layout_margin="5dp"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintVertical_bias="1.0"
-    tools:listitem="@layout/fragment_mainitem" />
+    -->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:name="ge.bondx.calories.MainItemFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        tools:listitem="@layout/fragment_mainitem" />
 
 </android.support.constraint.ConstraintLayout>
