--- a/app/src/main/res/layout/fragment_mainitem.xml
+++ b/app/src/main/res/layout/fragment_mainitem.xml
@@ -28,7 +28,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:text="TextView"
-                android:textSize="18sp"
+                android:textSize="15sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/checkBox"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints"
