--- a/app/src/main/res/layout/fragment_mainitem_list.xml
+++ b/app/src/main/res/layout/fragment_mainitem_list.xml
@@ -28,7 +28,7 @@
         android:id="@+id/list"
         android:name="ge.bondx.calories.MainItemFragment"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
