--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#3F51B5</color>
+    <color name="colorTransparent">#e33542</color>
+    <color name="colorBadge">#e33542</color>
+<!-- @android:color/transparent -->
+    <array name="tab_colors">
+        <item name="tab_1">#009688</item>
+        <item name="tab_2">#4CAF50</item>
+    </array>
 </resources>
